@@ -1,5 +1,16 @@
 2010-11-08  Anders Carlsson  <andersca@apple.com>
 
+        Reviewed by Dan Bernstein.
+
+        Plug-in views should not assume that plugins are RenderEmbeddedObjects
+        https://bugs.webkit.org/show_bug.cgi?id=49196
+        <rdar://problem/8638467>
+
+        * WebProcess/Plugins/PluginView.cpp:
+        (WebKit::PluginView::pluginProcessCrashed):
+
+2010-11-08  Anders Carlsson  <andersca@apple.com>
+
         Reviewed by Adam Roben.
 
         NPN_Evaluate doesn't work with out-of-process plugins in WebKit2
